RESOLVED FIXED274072
[GTK][WPE]: Regression (278519@main): build error with gcc 12.3.0
https://bugs.webkit.org/show_bug.cgi?id=274072
Summary [GTK][WPE]: Regression (278519@main): build error with gcc 12.3.0
Przemyslaw Gorszkowski
Reported 2024-05-12 23:17:23 PDT
WebCore::CSSCalcSymbolTable&, WebCore::CSSPropertyParserHelpers::CSSPropertyParserOptions) [with R = WTF::RefPtr<WebCore::CSSPrimitiveValue>; Base = WebCore::CSSPropertyParserHelpers::CSSPrimitiveValueResolverBase; Ts = {WebCore::TimeRaw}]’ at /home/pgorszkowski/WebKit/Source/WebCore/css/parser/CSSPropertyParserConsumer+MetaResolver.h:60:62, inlined from ‘WTF::RefPtr<WebCore::CSSPrimitiveValue> WebCore::CSSPropertyParserHelpers::consumeTime(WebCore::CSSParserTokenRange&, WebCore::CSSParserMode, WebCore::ValueRange, UnitlessQuirk)’ at /home/pgorszkowski/WebKit/Source/WebCore/css/parser/CSSPropertyParserConsumer+Time.cpp:113:90: /home/pgorszkowski/WebKit/Source/WebCore/css/CSSValue.h:341:16: error: pointer may be used after ‘static void WebCore::CSSValue::operator delete(WebCore::CSSValue*, std::destroying_delete_t)’ [-Werror=use-after-free] 341 | delete this;
Attachments
Vitaly Dyackhov
Comment 1 2024-05-20 07:21:16 PDT
EWS
Comment 2 2024-05-21 00:15:13 PDT
Committed 279040@main (d77aeedaad48): <https://commits.webkit.org/279040@main> Reviewed commits have been landed. Closing PR #28787 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-05-21 00:17:53 PDT
Note You need to log in before you can comment on or make changes to this bug.